# tanmatsu-web-mini

./: LICENSE  README.md
components/gui/: CMakeLists.txt  gui_edit.c  gui_element_footer.c  gui_element_header.c  gui_element_icontext.c  gui_menu.c  gui_menu_render.c  gui_osk.c  gui_osk_edit.c  idf_component.yml
components/gui/include/: gui_edit.h  gui_element_footer.h  gui_element_header.h  gui_element_icontext.h  gui_menu.h  gui_osk.h  gui_osk_edit.h  gui_style.h
components/timezone/: CMakeLists.txt  database.c  generate_database.sh  idf_component.yml  timezone.c
components/timezone/include/: timezone.h
main/: CMakeLists.txt  chakrapetchmedium.c  chakrapetchmedium.h  chakrapetchmedium.json  chakrapetchmedium.pax_font  http_download.c  http_download.h  icons.c  icons.h  idf_component.yml  main.c  message_dialog.c  message_dialog.h  sdcard.c  sdcard.h  terminal.c  terminal.h  textedit.c  textedit.h
main/common/: display.c  display.h  theme.c  theme.h
partition_tables/: 16M.ods
sdkconfigs/: general  hackerhotel-2026  konsool  mch2022  tanmatsu
